--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <i class="fa-solid fa-microphone fa-2x mic"></i>
         </div>
 
+        <div class="btn">
+            <button>Google Search</button>
+            <button>I'm feeling Lucky</button>
+        </div>
+
     </section>
 
 </body>
